--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>POKEDEX</h1>
     <ul class="pokemon-list"></ul>
-    <script src="js/scripts.js"></script>
+    <strong>
+        <script src="js/promise-pollyfill.js"></script>
+        <script src="js/fetch.umd.js"></script>
+        <script src="js/scripts.js"></script>
+    </strong>
 </body>
 </html>
