--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Simple JS App</title>
 </head>
 <body>
-    <h1>POKEDEX</h1>
-    <ul class="pokemon-list"></ul>
+    <div id ='modal-container'></div>
     <strong>
         <script src="js/promise-pollyfill.js"></script>
         <script src="js/fetch.umd.js"></script>
         <script src="js/scripts.js"></script>
     </strong>
+    <h1>POKEDEX</h1>
+    <ul class="pokemon-list"></ul>
 </body>
 </html>
